# mcptoolkit-for-codesys

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  RELEASING.md  REMOTE.md  SETUP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  concepts.md  configuration.md  dashboard.md  reliability.md  security.md
examples/remote-ssh/: README.md  codesys-mcp-stdio.cmd  start-codesys-visible.cmd  start-codesys-visible.py
mcptoolkit_for_codesys/: _validation.py  dashboard.py  ipc.py  schemas.py  server.py  watcher_manager.py
mcptoolkit_for_codesys/tools/: __init__.py  build.py  device.py  library.py  meta.py  online.py  pou.py  project.py  symbol.py  system.py  task.py
scripts/: _codesys_helpers.py  _registry.py  watcher.py
scripts/handlers/: build_h.py  device_h.py  library_h.py  meta_h.py  online_h.py  pou_h.py  project_h.py  symbol_h.py  task_h.py
tests/: test_dashboard.py  test_error_envelopes.py  test_handler_validation.py  test_ipc.py  test_online_safety.py  test_quality_tools.py  test_schemas.py  test_tool_annotations.py  test_tool_registry.py  test_validation.py  test_watcher_liveness.py  test_watcher_manager.py
tests/integration/: build_full_project.ps1  conftest.py  test_full_project.py
