[project]
name = "mcptoolkit-for-codesys"
version = "0.2.2"
description = "MCP toolkit for CODESYS 3.5 SP22 — drives the IDE via its Python ScriptEngine."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "mcptoolkit-for-codesys contributors" }]
keywords = ["codesys", "mcp", "model-context-protocol", "plc", "iec-61131", "automation", "scripting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
mcptoolkit-for-codesys = "mcptoolkit_for_codesys.server:main"
mcptoolkit-for-codesys-dashboard = "mcptoolkit_for_codesys.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcptoolkit_for_codesys"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "mcptoolkit_for_codesys/scripts"

# The watcher's IronPython source under scripts/ is force-included into the
# wheel as mcptoolkit_for_codesys/scripts/. The sdist must ship the original
# tree plus the project docs so a source build reproduces the wheel.
[tool.hatch.build.targets.sdist]
include = [
    "mcptoolkit_for_codesys",
    "scripts",
    "tests",
    "README.md",
    "CHANGES.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: async test (pytest-asyncio)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]
